[package]
name = "hl"
version.workspace = true
edition.workspace = true
rust-version = "1.86.0"
description = "JSON and logfmt log converter to human readable representation"
repository.workspace = true
license.workspace = true
keywords = ["cli", "json", "log", "logfmt", "viewer"]
categories = ["command-line-utilities", "development-tools", "parsing", "text-processing"]
build = "build.rs"

[workspace]
members = [
  ".",
  "crates/encstr",
  "crates/enumset-ext",
  "crates/enumset-serde",
  "crates/heapopt",
  "crates/hl-wasm",
  "crates/lifecycle",
  "crates/pager",
  "crates/serde-logfmt",
  "crates/styled-help",
  "crates/wildcard",
]

[workspace.package]
version = "0.36.2"
edition = "2024"
repository = "https://github.com/pamburus/hl"
license = "MIT"

[workspace.dependencies]
capnp = "0.25"
capnpc = "0.25"
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = { version = "4" }
clap_mangen = { git = "https://github.com/pamburus/rust-clap.git", rev = "20f0ffd737581a5ebf7479d2174f2c197f25c94d" }
json = { package = "serde_json", version = "1", features = ["raw_value"] }
log = "0.4"
memchr = "2"
rstest = "0.26"
shellwords = "1"
wildcard = { path = "crates/wildcard" }

[[bench]]
harness = false
name = "bench"

[features]
default = ["native"]
# Enable OS-bound features (file watching, signal handling, pager, terminal sizing, CLI tooling, etc.).
# Required for the CLI binary. Disabled by builds targeting wasm32-unknown-unknown.
native = [
  "dep:anstream",
  "dep:bytefmt",
  "dep:capnp",
  "dep:chrono-english",
  "dep:clap",
  "dep:clap_complete",
  "dep:clap_mangen",
  "dep:crossbeam-channel",
  "dep:crossbeam-utils",
  "dep:deko",
  "dep:env_logger",
  "dep:liblzma",
  "dep:notify",
  "dep:num_cpus",
  "dep:pager",
  "dep:shellwords",
  "dep:signal-hook",
  "dep:snap",
  "dep:styled-help",
  "dep:terminal_size",
  "dep:utf8-supported",
  "dep:which",
  "dep:wild",
  "enumset-ext/clap",
]

[dependencies]
anstream = { version = "1", optional = true }
bytefmt = { version = "0.1", optional = true }
capnp = { workspace = true, optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
chrono-english = { version = "0.1", optional = true }
chrono-tz = { version = "0.10", features = ["serde"] }
ciborium = "0.2"
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }
clap_mangen = { workspace = true, optional = true }
closure = "0.3"
collection_macros = "0.2"
color-print = "0.3"
config = { version = "0.15", features = ["json", "toml", "yaml"] }
const-str = "1"
crossbeam-channel = { version = "0.5", optional = true }
crossbeam-queue = "0.3"
crossbeam-utils = { version = "0.8", optional = true }
deko = { version = "0.6", optional = true }
derive_more = { version = "2", features = ["deref", "deref_mut", "display", "eq", "from", "into", "into_iterator"] }
digest-io = "0.1"
dirs = "6"
dirs-sys = "0.5"
encstr = { path = "./crates/encstr" }
enum-map = "2"
enumset = "1"
enumset-ext = { path = "./crates/enumset-ext", default-features = false, features = ["serde"] }
enumset-serde = { path = "./crates/enumset-serde" }
env_logger = { version = "0.11", optional = true }
flate2 = "1"
heapless = "0.9"
heapopt = { path = "./crates/heapopt" }
hex = "0.4"
humantime = "2"
itertools = "0.14"
itoa = { version = "1", default-features = false }
json.workspace = true
known-folders = "1"
liblzma = { version = "*", features = ["static"], optional = true }
lifecycle = { path = "./crates/lifecycle" }
log.workspace = true
logos = "0.16"
memchr.workspace = true
mline = { path = "./crates/mline" }
nonzero_ext = "0.3"
notify = { version = "8", features = ["macos_kqueue"], optional = true }
num_cpus = { version = "1", optional = true }
once_cell = "1"
owo-colors = "4"
pager = { path = "./crates/pager", optional = true }
pest = "2"
pest_derive = "2"
regex = "1"
rust-embed = "8"
serde = { version = "1", features = ["derive", "rc"] }
serde-logfmt = { path = "./crates/serde-logfmt" }
serde_plain = "1"
serde-value = "0.7"
sha2 = "0.11"
shellwords = { workspace = true, optional = true }
signal-hook = { version = "0.4", optional = true }
snap = { version = "1", optional = true }
static_assertions = "1"
strsim = "0.11"
strum = { version = "0.28", features = ["derive"] }
styled-help = { path = "./crates/styled-help", optional = true }
terminal_size = { version = "0.4", optional = true }
thiserror = "2"
titlecase = "3"
toml = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
utf8-supported = { version = "1", optional = true }
which = { version = "8", optional = true }
wild = { version = "2", optional = true }
wildcard.workspace = true
winapi-util = { version = "0.1" }
wyhash = "0.6"
yaml = { package = "yaml-peg", version = "1" }

[dev-dependencies]
assert_matches = "1"
base32 = "0.5"
byte-strings = "0.3"
clean-path = "0.2"
criterion = "0.8"
fnv = "1"
maplit = "1"
mockall = "0.14"
rand = "0.10"
regex = "1"
rstest.workspace = true
stats_alloc = "0.1"
wildmatch = "2"

[build-dependencies]
anyhow = "1"
capnpc.workspace = true
const-str = "1"
hex = "0.4"
json.workspace = true
semver = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

# Use native-tls on Windows ARM64 to avoid ring/clang requirement
# Use rustls (default) on all other platforms
[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.build-dependencies]
ureq = { version = "3", default-features = false, features = ["gzip", "native-tls", "platform-verifier"] }

[target.'cfg(not(all(target_os = "windows", target_arch = "aarch64")))'.build-dependencies]
ureq = "3"

[target.'cfg(target_os = "macos")'.dependencies]
kqueue = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1

# Override profile for the WASM crate: optimize for size, strip debug info.
# Workspace-wide profile overrides must live in the root manifest.
[profile.release.package.hl-wasm]
opt-level = "z"
strip = true
