[package]
description = "Extends the enumset crate with additional functionality."
name = "enumset-ext"
version = "0.2.1"
workspace = "../.."
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
serde = ["dep:serde", "dep:enumset-serde"]
clap = ["dep:clap" ]

[dependencies]
clap = { workspace = true, optional = true }
enumset = { version = "1", features = [] }
enumset-serde = { path = "../enumset-serde", optional = true }
serde = { version = "1", optional = true }
