[package]
name = "enumset-ext"
version = "0.2.1"
edition.workspace = true
description = "Extends the enumset crate with additional functionality."
repository.workspace = true
license.workspace = true
workspace = "../.."

[dependencies]
clap = { workspace = true, optional = true }
enumset = { version = "1", features = [] }
enumset-serde = { path = "../enumset-serde", optional = true }
serde = { version = "1", optional = true }

[features]
clap = ["dep:clap"]
serde = ["dep:enumset-serde", "dep:serde"]
