[package]
description = "Read-only flat tree data structure"
name = "flat-tree"
version = "0.1.0"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive-where = "1"
derive_more = {version="1", features = ["deref", "deref_mut", "from"]}
