[package]
name = "heapopt"
version = "0.1.0"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive-where = "1"
heapless = { git = "https://github.com/pamburus/heapless.git", branch = "feature/indexmap/merged" }
indexmap = "2"

[dev-dependencies]
more-asserts = "0"
