[package]
name = "log-format-logfmt"
version = "0.1.0"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
bytes = ["dep:bytes", "upstream/bytes"]

[dependencies]
logos = "0"
bytes = { version = "1", optional = true }
upstream = { path = "../log-format", package = "log-format", features = ["logos"] }

[dev-dependencies]
log-ast = { path = "../log-ast", package = "log-ast" }
