[package]
name = "log-format"
version = "0.1.0"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["logos"]
bytes = ["dep:bytes"]
logos = ["dep:logos"]

[dependencies]
bytes = { version = "1", optional = true }
logos = { version = "0", optional = true }
