[package]
name = "serde-logfmt"
version = "0.1.2"
edition.workspace = true
description = "Logfmt decoding based on serde"
repository.workspace = true
license.workspace = true
workspace = "../.."

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
