[package]
name = "cancel"
version = "0.1.0"
edition.workspace = true
description = "Cooperative event-driven cancellation token"
repository.workspace = true
license.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
