[package]
name = "hl-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings exposing the hl log renderer to the browser."
license = "MIT"
publish = false

# Standalone workspace — kept out of the root workspace so the main `cargo build` is unaffected.
[workspace]

# wasm-opt needs explicit feature flags for the modern instructions rustc emits
# (bulk memory + nontrapping-fptoint are enabled by default since rust 1.82+).
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hl = { path = "../..", default-features = false }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "console",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
