[package]
name = "hl-wasm"
version = "0.1.0"
edition.workspace = true
description = "WebAssembly bindings exposing the hl log renderer to the browser."
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hl = { path = "../..", default-features = false }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "console",
]

# wasm-opt needs explicit feature flags for the modern instructions rustc emits
# (bulk memory + nontrapping-fptoint are enabled by default since rust 1.82+).
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']
